docker compode file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 version: "3.9"
 services:
   db:
-    platform: linux/amd64
+    platform: Linux/amd64
     image: mysql:8.0.28
     container_name: barak_mysql
+    command: mysqld --innodb_use_native_aio=0
     environment:
-      MYSQL_DATABASE: 'super-app'
-      MYSQL_ROOT_PASSWORD: 'password'
+      - MYSOL DATABASE=super-app
+      - MYSQL_ROOT_PASSWORD=password
+    restart: always
     healthcheck:
-      test: mysqladmin ping -h 127.0.0.1 -u $MYSQL_DATABASE --password=$MYSQL_ROOT_PASSWORD
-      start_period: 5s
-      interval: 5s
-      timeout: 5s
-      retries: 55  
+      test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent"]
+      interval: 3s
+      retries: 5
+      start_period: 30s
     ports:
       - 3306:3306  
     volumes:
